public/stylesheets/application.css
/* ... */
#user form input {
  z-index: 7;
}
#user_box {
  position: absolute;
  top: 3px;
  right: 170px;
  width: 200px;
  z-index: 100;
}
.docSize-LT-900 #user_box {
  right: 165px;
  width: 160px;
}
#user_menu_head, #user_box a, #assets_menu a, .top_extra_menu a {
  font-size: 12px;
  line-height: 18px;
  font-weight: bold;
  text-decoration: none;
  color: #B8CFE7;
  display: block;
  padding-left: 20px;
  height: 18px;
  white-space: nowrap;
  overflow: hidden;
  position: relative;
}
#user_box a:hover, .top_extra_menu a:hover {
  background: #3465A4;
  color: #FFF;
}
.msie5 #user_box a, .msie5 .top_extra_menu a {
  color: #FFF;
  text-decoration: none;
}
#user_box img, #user_box a span, #assets_menu a span {
  position: absolute;
  top: 0px;
  left: 0px;
  width: 18px;
  height: 18px;
  display: block;
  float: left;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  opacity: 0.7;
  filter: alpha(opacity=70);
}
#assets_menu a#open_search span {
  top: 1px;
}
/*.msie5 #user_box img,*/
.msie5 #user_box a span, .msie5 #assets_menu a span {
  display: none;
}
#user_box img, #user_box a:hover span, #assets_menu a:hover span {
  opacity: 1;
  filter: alpha(opacity=100);
}
#user_box img {
  border: none;
  top: -2px;
  left: -1px;
  width: 20px;
  height: 20px;
}
/* * * User Menu * * * * * * * * * * * */

#user_menu {
  border: none; /* work arround IE Bug */
}
#user_menu_head {
  overflow: visible;
  cursor: default;
  width: 100%;
  overflow: hidden;
}
#user_menu_head span {
  position: relative;
  top: 1px;
  left: 1px;
  font-weight: normal;
}
#user_menu_head, #user_box a#link_login {
  margin-left: 4px;
}
#user_menu a#link_login:hover {
}
#user_box a#link_go_home {
  line-height: 22px;
  top: -3px;
  overflow: visible;
}
.msie #link_go_home img {
  margin-top: 3px;
}
#user_menu_ul {
  position: absolute;
  top: 21px;
  right: 0px;
  background: #888;
}
#user_menu ul {
  width: 200px;
  max-width: 190px;
  height: 0px;
  position: relative; /* work arround IE Bug */
  overflow: hidden;
  padding: 0px 4px 0px 5px;
  margin: 0px;
}
.msie #user_menu ul {
  height: 1px;
}
#user_menu li {
  width: 100%;
  overflow: hidden;
}
#manage-enterprises {
  display: inline-block;
  margin-right: 5px;
  position: relative;
}
#manage-enterprises .ui-icon {
  position: absolute;
  top: 0;
  right: -20px;
}
#manage-enterprises .simplemenu-submenu {
  text-align: left;
  left: -20px;
  width: 200px;
}
#manage-enterprises .simplemenu-item {
  padding: 5px 0;
}
#manage-enterprises .simplemenu-item a {
  background-repeat: no-repeat;
  padding-left: 20px;
}
#manage-enterprises .simplemenu-item a span {
  display: none;
}
.msie8 #manage-enterprises-link { /* IE8 hack */
  border: 0px solid;
}
.msie8 #manage-enterprises .simplemenu-submenu {
  top: 16px;
}
.webkit #manage-enterprises .simplemenu-submenu {
  top: 20px;
}
#article {
  position: relative;
  text-align: justify;
}
#article-actions {
  margin-bottom: 5px;
  width: 100%;
  text-align: left;
}

#article-actions a{
  white-space: nowrap;
}
#article-tags {
  font-size: 10px;
  text-align: right;
  margin-bottom: -10px;
}
#article-tags a {
  text-decoration: none;
}

#article-sub-header {
  height: 15px;
}

#article-hits {
  font-size: 10px;
  float: left;
}

#article-license {
  font-size: 10px;
  float: right;
  text-align: right;
  color: #AAA;
}
#article-cat {
  font-size: 10px;
}
#article-source {
  color: #999;
  font-size: 11px;
  text-align: right;
  font-weight: bold;
}
#article-source a {
  font-weight: normal;
}
.article-lead, #article-body-field {
  margin-top: 10px;
  display: none;
}
.zoomable-image {
  position: relative;
  display: inline-block;
  max-width: 100%;
}
/* IE 8 hack to avoid max-width image bug */
.msie8 #content #article .article-body .zoomable-image img {
  max-width: none !important;
}
/* IE 7 hack to simulate inline-block */
.msie7 .zoomable-image {
  zoom: 1;
        *display: inline;
}
.zoomify-image {
  position: absolute;
  left: 0;
  top: 0;
  display: none;
  width: 100%;
  height: 16px;
  text-align: left;
  background: transparent url(/images/black-alpha-pixel.png);
  border-bottom: 1px solid #333;
  text-decoration: none;
}
.zoomable-image:hover .zoomify-image {
  display: block;
  text-decoration: none;
}
#article .zoomify-image {
  text-decoration: none;
  color: #fff;
}
.zoomify-image span {
  font-size: 10px;
  line-height: 16px;
  padding-left: 16px;
  border-bottom: 1px solid #eee;
  display: block;
  background: transparent url(/images/zoom.png) left center no-repeat;
  color: #fff;
}
#article pre {
  white-space: pre-wrap;
  padding: 5px;
  border: 1px solid #d3d7cf;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}
#article pre, #article code {
  background: #eeeeec;
  color: #2e3436;
}
#article .article-body a.icon {
  padding: 0px 0px 3px 20px;
  border: none;
  background-repeat: no-repeat;
}
#article .article-body a.icon:hover {
  background-color: transparent;
}
/* * *  Comments  * * */

.comments {
}
span.comment-count.hide{
  display: none;
}
#content .no-comments-yet {
  text-align: center;
  font-size: 80%;
  opacity: 0.5;
  filter: alpha(opacity=50);
}
.do-not-comment {
  display: block;
  text-align: right;
  padding-top: 15px;
  font-size: 80%;
  opacity: 0.5;
  filter: alpha(opacity=50);
}
.article-comment {
  position: relative;
  border: 1px solid #ccc;
  margin-bottom: 10px;
  padding: 4px;
}
#article .article-comment .comment-details h4 {
  font-size: 13px;
  margin: 0px;
  display: inline;
}
.comment-picture {
  display: block;
  float: left;
  width: 70px;
  background-repeat: no-repeat;
  background-position: 0% 0%;
}
a.comment-picture {
  text-decoration: none;
}
.comment-created-at {
  float: right;
  margin-left: 5px;
}
.comment-info, .comment-created-at {
  font-size: 10px;
  color: #999;
  display: inline;
}
.comment-info {
  display: block;
}
.comment-from-owner .comment-info {
  color: #666;
}
/* ... */

